<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/commen_padding"
        android:hint="@string/please_enter_password"
        android:background="@null"/>

    <View
        style="@style/HorizontialLine"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/commen_padding"
            android:text="@string/connect"/>

        <View
            style="@style/VerticalLine"/>

        <TextView
            android:id="@+id/tv_disconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/commen_padding"
            android:text="@string/disconnect"/>


    </LinearLayout>


</LinearLayout>