<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_grey_bg">

    <!-- <Button
        android:id="@+id/btn_start"
        style="@style/CommonButtonTheme"
        android:layout_alignParentBottom="true"
        android:text="@string/start"/> -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base_bg"
            android:padding="@dimen/commen_padding">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/status"/>


            <TextView
                android:id="@+id/tv_wifi_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/commen_padding"
                android:textColor="@color/base_tv_color_red"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>


        <View
            style="@style/HorizontialLine"/>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base_bg"
            android:padding="@dimen/commen_padding">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/ssid"/>


            <TextView
                android:id="@+id/tv_wifi_ssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/commen_padding"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>



        <View
            style="@style/HorizontialLine"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base_bg"
            android:padding="@dimen/commen_padding">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/bssid"/>


            <TextView
                android:id="@+id/tv_wifi_bssid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/commen_padding"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base_bg"
            android:layout_marginTop="@dimen/commen_margin"
            android:padding="@dimen/commen_padding">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/on_time"/>


            <TextView
                android:id="@+id/tv_wifi_on_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/commen_padding"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <View
            style="@style/HorizontialLine"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base_bg"
            android:padding="@dimen/commen_padding">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/off_time"/>


            <TextView
                android:id="@+id/tv_wifi_off_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/commen_padding"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/base_bg"
            android:layout_marginTop="@dimen/commen_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_connect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/commen_padding"
                android:text="@string/connect"/>

            <View
                style="@style/VerticalLine"/>


            <TextView
                android:id="@+id/tv_disconnect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/commen_padding"
                android:text="@string/disconnect" />




        </LinearLayout>

    </LinearLayout>


</RelativeLayout>